--- a/watchu_db/watchu_db/templates/test_room/menu.html
+++ b/watchu_db/watchu_db/templates/test_room/menu.html
@@ -6,10 +6,10 @@
         <a href="{{ url_for('test_room.make') }}" class="btn btn-primary btn-lg mb-2">시험 생성</a>
     </div>
     <div class="row d-flex justify-content-center align-items-center">
-        <a href="#" class="btn btn-primary btn-lg mb-2">시험 수정</a>
+        <a href="{{ url_for('test_room.edit_list') }}" class="btn btn-primary btn-lg mb-2">시험 수정</a>
     </div>
     <div class="row d-flex justify-content-center align-items-center">
-        <a href="#" class="btn btn-primary btn-lg mb-2">시험 입장</a>
+        <a href="{{ url_for('test_room.watching_list') }}" class="btn btn-primary btn-lg mb-2">시험 입장</a>
     </div>
 </div>
 
