watching page UI 살짝 변경 & socketIO 하기 전 저장

--- a/watchu_db/watchu_db/templates/test_room/watching_list.html
+++ b/watchu_db/watchu_db/templates/test_room/watching_list.html
@@ -6,7 +6,7 @@
     <ul class="list-group ProgramList">
         {% for test_room_id in test_room_list %}
         <li class="list-group-item mt-2">
-            시험번호 : {{ t }}
+            시험번호 : {{ test_room_id }}
             <a href="{{ url_for('test_room.watching', test_room_id=test_room_id) }}" class="btn btn-primary float-right">입장</a>
         </li>
         {% endfor %}
