시험 중 학생 디테일 페이지에서도 화면공유 방식을 HTTP로 변경

--- a/WatchU-Web/WatchU/static/css/style.css
+++ b/WatchU-Web/WatchU/static/css/style.css
@@ -116,7 +116,7 @@ p, span, li {
     display: inline-block;
 }
 
-.area__watchingDetail .container2 div {
+#log_list {
     max-height: 490px; 
     overflow-y: scroll;
 }
