--- a/WatchU-Web/WatchU/templates/test_room/watching.html
+++ b/WatchU-Web/WatchU/templates/test_room/watching.html
@@ -69,7 +69,7 @@
                 }
             }, 
             error: () => {
-                console.log("Log ajax error!!");
+                console.log("Image ajax error!!");
             }
         });
         resetTimer_();
